removed submit button on html and javascript as it serves no purpose anymore

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+/* This code was assisted with ChatGPT and GreatStack's Quiz building walkthrough: https://www.youtube.com/watch?v=PBcqGxrr9g8 */
+/* image referenced:https://pixabay.com/photos/las-vegas-nevada-cities-urban-1620961/ */
+.body {
+background-image: url 
+}
+
 .quiz-container{
     background: #FFB3CB
-    
 }
