--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .quiz-container{
+ text-align: center;
  margin: 0 auto;
  padding: 50px;
  background-color: #ffffff;
@@ -26,7 +27,10 @@ body {
 }
 
 .choice {
+    padding: 20px 20px;
     flex: 0 0 calc(50% - 10px);
     margin: 5px;
     /* Add or modify button styles as needed */
 }
+
+/* 
