--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@ body {
     position: center;
 }
 
-#image {
-    background-size: auto;
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .quiz-container{
@@ -32,6 +35,7 @@ body {
 }
 
 .choice {
+    font-family: Arial, sans-serif;
     padding: 20px 20px;
     flex: 0 0 calc(50% - 10px);
     margin: 5px;
